--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Member/Member.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Member/Member.cshtml
@@ -522,6 +522,7 @@
                             <th></th>
                             <th>勾選</th>
                             <th>ID</th>
+                            <th>大頭貼</th>
                             <th>姓名</th>
                             <th>帳號</th>
                             <th>性別</th>
@@ -989,6 +990,17 @@
                 },
                 //這裡要注意json裡面是大寫還是小寫
                 { data: 'memberId' },
+                //圖片
+                {
+                    data: 'memberImage',
+                    render: function (data, type, row, meta) {
+                        if (data) {
+                            return `<img class="img-thumbnail" style="max-width: 100px;" src="${data}">`;
+                        } else {
+                            return '';
+                        }
+                    }
+                },
                 { data: 'name' },
                 { data: 'memberAccount' },
                 { data: 'gender' },
@@ -1053,7 +1065,7 @@
             buttons: [
                 'pageLength', 'copy', 'csv', 'excel', 'print'
             ],
-            "order": [[8, 'desc']]  // 在這裡指定初始排序的列和順序，0 表示第一列（memberId），'desc' 表示降序
+            "order": [[9, 'desc']]  // 在這裡指定初始排序的列和順序，0 表示第一列（memberId），'desc' 表示降序
         });
 
 
