--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Member/Member.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Member/Member.cshtml
@@ -309,7 +309,7 @@
 
 <div class="middle-content">
 
-    <div class="row  align-items-center">
+    <div class="row align-items-center">
         <div class="col-6">
             <h2 class="mt-3">會員管理</h2>
         </div>
@@ -498,6 +498,18 @@
         </div>
     </div>
     <!---新增會員 modal-->
+
+
+    <div class="search-row row mt-3">
+        <div class="row align-items-center">
+            訂閱電子報：
+            <select class="form-select w-25" id="memberSubList">
+                <option value="" selected>全部會員</option>
+                <option value="是">是</option>
+                <option value="否">否</option>
+            </select>
+        </div>
+    </div>
 
     <div class="container-fluid mt-3">
         <div class="row">
@@ -956,7 +968,7 @@
         //=======================搜尋功能
 
         // 綁定select元素的change事件，當選擇條件改變時，重新過濾表格資料
-        $('#memberStatusList').on('change', function () {
+        $('#memberSubList').on('change', function () {
             var filterOption1 = $(this).val();
 
             // 使用DataTable的column().search()方法進行過濾
