--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Banner/Banner.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Banner/Banner.cshtml
@@ -95,6 +95,11 @@
                                 </div>
 
                                 <div class="form-group">
+                                    <label>連結：</label>
+                                    <input type="text" class="form-control" id="create-topage" name="ToPage">
+                                </div>
+
+                                <div class="form-group">
                                     <label>是否顯示：</label>
                                     <select class="form-select" id="create-display" name="Display">
                                         <option value="" selected disabled>請選擇狀態</option>
@@ -151,6 +156,7 @@
                                     <th>編號</th>
                                     <th>名稱</th>
                                     <th>發佈時間</th>
+                                    <th>連結</th>
                                     <th>圖片</th>
                                     <th>編輯/刪除</th>
                                     <th>顯示</th>
@@ -184,6 +190,10 @@
                                             <input type="date" class="form-control" id="editor-date" name="PublishDate">
                                         </div>
 
+                                    <div class="form-group">
+                                        <label>連結：</label>
+                                        <input type="text" class="form-control" id="editor-topage" name="ToPage">
+                                    </div>
 
                                         <div class="form-group">
                                         <label>圖片：</label>
@@ -267,6 +277,7 @@
                         return formattedDate;
                     }                
                 },
+                { "data": "toPage" },
                 {
                     "data": "link",
                     render: function (data, type, row) {
@@ -312,6 +323,7 @@
                         $('#editor-date').val(formattedDate);
 
                         $('#previewImage').attr('src', response.data.link)
+                        $('#editor-topage').val(response.data.toPage);
                         console.log(response.data)
                        
                     } else {
@@ -343,6 +355,7 @@
             var id = $('#editor-id').val();
             var name = $('#editor-name').val()
             var date = $('#editor-date').val()
+            var topage = $('#editor-topage').val()
             var fileInput = $('#editor-img')[0];
             var file = fileInput.files[0];
 
@@ -350,6 +363,7 @@
             formData.append("BannerId", id);
             formData.append("Banner", name);
             formData.append("PublishDate", date);
+            formData.append("ToPage", topage);
             if (file) {
                 formData.append("Image", file)
             }
@@ -429,13 +443,14 @@
             const name = $("#create-name").val();
             const publishdate = $("#create-date").val();
             const display = $('#create-display').val();
+            const topage = $('#create-topage').val();
             var fileInput = $('#create-image')[0];
             var file = fileInput.files[0];
 
 
             //驗證非空值
-            if (!name || !publishdate || !display || !file) {
-                showErrorMessage("錯誤", "名稱、上架日期、是否顯示、圖片為必填欄位，請再次檢查。");
+            if (!name || !publishdate || !display || !topage || !file) {
+                showErrorMessage("錯誤", "名稱、連結、上架日期、是否顯示、圖片為必填欄位，請再次檢查。");
                 return;
             }
 
@@ -444,6 +459,7 @@
             var formData = new FormData();
             formData.append("Banner", name)
             formData.append("PublishDate", publishdate);
+            formData.append("ToPage", topage);
             formData.append("display", display);
             if (file) {
                 formData.append("Image", file)
@@ -608,8 +624,9 @@
 
         //新增Demo按鍵
         function setCreateBannerValue() {
-            $("#create-name").val("開服限定召喚橫幅");
+            $("#create-name").val("開服限定召喚");
             $("#create-date").val("2023-09-01");
+            $("#create-topage").val("https://localhost:7218/Game/Index");
             $('#create-display').val("true");
         }
 
@@ -618,6 +635,7 @@
             $('#create-name').val('');
             $('#create-date').val('');
             $('#create-display').val('');
+            $('#create-topage').val('');
             $('#create-image').val('');
             $('#preview-createimage').val('');
         }
